--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,11 +18,12 @@
     "react-icons": "^4.10.1",
     "react-image-magnify": "^2.7.4",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "slugify": "^1.6.6",
     "sweetalert2": "^11.7.23",
