--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:5000/api/v1
+REACT_APP_API_URL=https://ecommerce-server-1r1m.onrender.com/api/v1
 REACT_APP_KEY=l810lnmofp4y2z62zw4ghkyd9l1m9df96k53427d3mszfpcy
